After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 711741 - Fix the arrows icons in RTL
Fix the arrows icons in RTL
Status: RESOLVED FIXED
Product: gthumb
Classification: Other
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: Paolo Bacchilega
Paolo Bacchilega
Depends on:
Blocks:
 
 
Reported: 2013-11-09 20:34 UTC by Yosef Or Boczko
Modified: 2013-11-10 13:37 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
headerbar: set the button arrow icons according to the locale's text direction (1.76 KB, patch)
2013-11-09 20:35 UTC, Yosef Or Boczko
none Details | Review
module-test: Fix leaks in test (697 bytes, patch)
2013-11-10 13:36 UTC, Stef Walter
none Details | Review

Description Yosef Or Boczko 2013-11-09 20:34:59 UTC
See the patch (for last master).
Comment 1 Yosef Or Boczko 2013-11-09 20:35:52 UTC
Created attachment 259348 [details] [review]
headerbar: set the button arrow icons according to the locale's text direction
Comment 2 Paolo Bacchilega 2013-11-09 20:44:38 UTC
Patch applied with some minor changes, thank you.
Comment 3 Stef Walter 2013-11-10 13:36:20 UTC
Created attachment 259419 [details] [review]
module-test: Fix leaks in test
Comment 4 Stef Walter 2013-11-10 13:37:17 UTC
Comment on attachment 259419 [details] [review]
module-test: Fix leaks in test

Ooops. Wrong bug.