headerbar: set the button arrow icons according to the locale's text direction

https://bugzilla.gnome.org/show_bug.cgi?id=711741